# chaveiro

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  conteudo legitimo  pyproject.toml
.github/workflows/: ci.yml
src/chaveiro/: __init__.py  __main__.py  cli.py
src/chaveiro/attacks/: confusion.py  crack.py
src/chaveiro/checks/: catalog.py  detectors.py
src/chaveiro/core/: jwt.py  models.py
src/chaveiro/reference/: secure_validation.py
src/chaveiro/report/: console.py  json_report.py
tests/: conftest.py  test_attacks.py  test_cli.py  test_detectors.py  test_jwt.py  test_reference.py  test_report.py  test_review_fixes.py
