[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chaveiro"
version = "0.1.0"
description = "Auditor de segurança de tokens JWT/JWS — alg:none, confusão de algoritmo, brute de segredo HMAC, kid/jku SSRF e validação de claims."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Paulo Marcos Lucio" }]
keywords = ["security", "jwt", "jws", "jose", "appsec", "oauth", "fapi", "owasp"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Security",
]
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/Paulo-Marcos-Lucio/chaveiro"
Repository = "https://github.com/Paulo-Marcos-Lucio/chaveiro"

[project.scripts]
chaveiro = "chaveiro.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/chaveiro"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/chaveiro/cli.py" = ["B008"]

[tool.ruff.lint.isort]
# Deixa a categorização determinística entre ambientes (local e CI).
known-first-party = ["chaveiro", "tests"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
disallow_untyped_decorators = false
files = ["src"]

[[tool.mypy.overrides]]
module = ["typer.*", "rich.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
